# beancount

./: .bazelrc  .bazelrc.travis  .dir-locals.el  .gitattributes  .gitignore  .hgignore  .hgtags  .htaccess  .nginx.conf  .pre-commit-config.yaml  .pylintrc  .rustfmt.toml  .travis.yml  AGENTS.md  BUILD  BUILD.bazel  CHANGES  COPYING  CREDITS  Cargo.toml  Clippy.toml  GO_CONVERSION_PLAN.md  MANIFEST.in  Makefile  PKG-INFO  PKGINFO  README  README.rst  Setup TODO  TODO  VERSION  WORKSPACE  a.py  appveyor.yml  bench.bean  bitbucket-pipelines.yml  conftest.py  demo.sh  grammar.js  grammar.json  (+17 more)
.github/: FUNDING.yml  copilot-instructions.md
bazel/: repositories.bzl
beancount/: BUILD  VERSION  __beancount.pyd  __beancount.pyi  __init__.py  api.py  defs.h  docs.md  loader.py  loader_test.py
beancount/cparser/: BUILD  README_syntax.md  builder.cc  builder.h  extmodule.cc  extmodule_test.py  grammar.py  inter.proto  ledger.cc  ledger.h  ledger.proto  meson.build  options.proto  parser.proto  parser.yxx  parser_test.cc  scanner.lxx  scanner_test.cc  test_utils.cc  test_utils.h  test_utils_test.cc  topython.cc
crates/beancount-formatter/: Cargo.toml
crates/beancount-formatter/src/: format.rs  lib.rs
crates/beancount-formatter/src/configuration/: configuration.rs  mod.rs  new_line_kind.rs
crates/beancount-formatter/tests/: format_cases.rs
crates/beancount-parser/: Cargo.toml
crates/beancount-parser-py/: Cargo.toml
crates/beancount-parser-py/src/: core.rs  data.rs  lib.rs
crates/beancount-parser-py/tests/: cost_spec.rs
crates/beancount-parser/src/: ast.rs  core.rs  lib.rs  parse.rs
crates/beancount-parser/src/configuration/: configuration.rs  new_line_kind.rs
crates/beancount-parser/tests/: balance_pad.rs  commodity_price.rs  common.rs  cost_spec.rs  custom.rs  document.rs  event_query.rs  include.rs  key_values.rs  meta.rs  meta_directives.rs  open_close.rs  option.rs  plugin.rs  raw.rs  tags.rs  transaction.rs  transaction_cases.rs
crates/beancount-tree-sitter/: Cargo.toml  build.rs  grammar.js
crates/beancount-tree-sitter/src/: grammar.json  lib.rs  node-types.json  node_kind.rs  parser.c  scanner.c
crates/beancount-tree-sitter/test/corpus/: account_names_extended.txt  arithmetic.txt  arithmetic_extended.txt  balance_extended.txt  chinese_characters.txt  comment.txt  currencies.txt  currency_extended.txt  date_formats.txt  entry_types.txt  incomplete_accounts.txt  markdown_orgmode.txt  metadata.txt  multi_line.txt  number_formats.txt  orgmode_sections.txt  parse_lots.txt  parser_include.txt  parser_links.txt  posting_variations.txt  push_pop_meta.txt  single_line_file.txt  string_variations.txt  tags_links_extended.txt  transaction.txt  transaction_flags.txt  ugly_bugs.txt
crates/chumsky/: Cargo.toml
crates/chumsky/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/benches/: transaction.rs
crates/parser/src/: ast.rs  core.rs  file_parser.rs  lib.rs  parse.rs  parser.rs  path_utils.rs  tree_sitter_parser.rs  utils.rs
crates/parser/src/configuration/: mod.rs
crates/parser/src/parser/: balance.rs  close.rs  comment.rs  commodity.rs  common.rs  custom.rs  document.rs  event.rs  headline.rs  include.rs  mod.rs  note.rs  number.rs  open.rs  option.rs  pad.rs  plugin.rs  popmeta.rs  poptag.rs  price.rs  pushmeta.rs  pushtag.rs  query.rs  raw.rs  transaction.rs
crates/parser/tests/: ast_chumsky_cost_spec.rs  ast_chumsky_key_values.rs  ast_chumsky_transaction.rs  ast_common.rs  ast_cost_spec.rs  ast_spans.rs  ast_transaction.rs  balance_pad.rs  chumsky_balance_pad.rs  chumsky_commodity_price.rs  chumsky_common.rs  chumsky_cost_spec.rs  chumsky_custom.rs  chumsky_document.rs  chumsky_event_query.rs  chumsky_include.rs  chumsky_key_values.rs  chumsky_meta_directives.rs  chumsky_open_close.rs  chumsky_option.rs  chumsky_parser.rs  chumsky_plugin.rs  chumsky_raw.rs  chumsky_tags.rs  chumsky_transaction.rs  chumsky_transaction_cases.rs  common.rs  core_balance_pad.rs  core_chumsky_balance_pad.rs  core_chumsky_commodity_price.rs  core_chumsky_common.rs  core_chumsky_custom.rs  core_chumsky_document.rs  core_chumsky_event_query.rs  core_chumsky_include.rs  core_chumsky_inline_comment.rs  core_chumsky_meta_directives.rs  core_chumsky_open_close.rs  core_chumsky_option.rs  core_chumsky_parser.rs  (+24 more)
crates/tree-sitter/: Cargo.toml  tree-sitter.json
crates/tree-sitter/src/: grammar.json  node-types.json
crates/tree-sitter/test/corpus/: account_names_extended.txt  arithmetic.txt  chinese_characters.txt  comment.txt  currencies.txt  entry_types.txt  markdown_orgmode.txt  multi_line.txt  number_formats.txt  orgmode_sections.txt  parse_lots.txt  parser_options.txt  parser_plugin.txt  push_pop_tag.txt  transaction.txt  transaction_flags.txt  ugly_bugs.txt
doc/: 2013-06-03.importing.dia  Makefile  README  accounting.html  accounting.txt  airmiles.txt  beancount.html  capgains.html  capgains.txt  cheatsheet.org  design-doc.link  design-doc.org  design-doc.txt  differences.html  differences.txt  example.beancount  index.link  pyledger.html  pyledger.txt  rejected-ideas.org  users-manual.link  users-manual.org
docs/: .gitignore  Makefile  README  docs.md  parser-syntax.md  pyproject.toml  zensical.yml
docs/site_docs/: docs.md  index.md
docs/site_docs/css/: custom.css
docs/site_docs/javascripts/: header.js  shortcuts.js
etc/: dependency-constraints.py  docutilsrc  emacsrc  emacsrc.el  env  find-missing-tests.py  pylintrc  update-copyright.py
examples/: BUILD  README  capgains1.ledger  capgains2.ledger  capgains3.ledger  demo.beancount  demo.ledger  demo.sh  demo1.sh  demo2.sh  docs.md  email.2008-05-06  example.beancount  example.returns.py  rundemo.sh
experiments/: bean-format  bean-grep  bean-roundtrip  bean-sandbox  bean-transaction-types  bean-treemap  bean-v1tov2  extract-chart-of-accounts.py  (+7 more)
experiments/rust/interop/: Cargo.toml  README.md  interop_example.py  pyproject.toml
experiments/rust/interop/src/: lib.rs
experiments/rust/interop/tests/: interop_test.py
requirements/: BUILD.bazel  dev.txt  dev_lock.txt  tools.txt  tools_lock.txt
(+1859 files in other folders)
