[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["David Sherret <dsherret@gmail.com>"]
homepage = "https://github.com/trim21/beancount-format"
license = "MIT"
repository = "https://github.com/trim21/beancount-format"
description = "Beancount formatter library and tooling."

[workspace.dependencies]


[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
