[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Trim21 <trim21.me@gmail.com>"]
homepage = "https://github.com/trim21/beancount"
license = "MIT"
repository = "https://github.com/trim21/beancount"
description = "Beancount"

[workspace.dependencies]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
