[build-system]
build-backend = "mesonpy"
requires = [
    'flex-bin ; sys_platform == "linux" or sys_platform == "darwin"',
    'bison-bin ; sys_platform == "linux" or sys_platform == "darwin"',
    'winflexbison-bin>=2.5.25.1 ; sys_platform == "win32"',
    "meson-python >= 0.14.0",
    "meson >= 1.2.1",
]

[project]
name = "beancount"
description = "Command-line Double-Entry Accounting"
readme = { content-type = "text/x-rst", text = """
A double-entry accounting system that uses text files as input.

Beancount defines a simple data format or "language" that lets you
define financial transaction records in a text file, load them in
memory and generate and export a variety of reports, such as balance
sheets or income statements. It also provides a client with an
SQL-like query language to filter and aggregate financial data, and a
web interface which renders those reports to HTML. Finally, it
provides the scaffolding required to automate the conversion of
external data into one's input file in Beancount syntax.""" }
authors = [
    { name = "Martin Blais", email = "blais@furius.ca" },
]
license = { text = "GPL-2.0-only" }
requires-python = ">=3.9"
dependencies = [
    "click >=7.0",
    "python-dateutil >=2.6.0",
    "regex >=2022.9.13",
    "validate-pyproject>=0.25",
]
dynamic = ["version"]

[dependency-groups]
test = [
    "pytest",
    "pytest-xdist",
]
types = [
    "ty",
    "types-python-dateutil",
    "types-regex",
]
# The dev group will automatically be installed by uv when using e.g. `uv sync`
dev = [
    { include-group = "test" },
    { include-group = "types" },
    "meson >= 1.2.1",
    "meson-python >= 0.14.0",
]

[project.scripts]
bean-check = "beancount.scripts.check:main"
bean-doctor = "beancount.scripts.doctor:main"
bean-example = "beancount.scripts.example:main"
bean-format = "beancount.scripts.format:main"
treeify = "beancount.tools.treeify:main"

[project.urls]
homepage = "https://beancount.github.io/"
documentation = "https://beancount.github.io/docs/"
repository = "https://github.com/beancount/beancount"
donations = "https://www.paypal.com/paypalme/misislavski"

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
exclude = [
    "**/tools/",
    "**/experiments/",
    "**/__pycache__/",
    ".venv/",
    "build/",
]

[tool.black]
line-length = 92
# Please note: We use 'ruff format' to autoformat buffers.
# See 'rust-format.el' and .dir-locals.el at the root of the project.

[tool.pytest.ini_options]
testpaths = ["beancount"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".ty_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 92

[tool.ruff.lint]
# Enable all rules.
select = ["ALL"]
ignore = [
    "D",        # Documentation (too noisy)
    "ANN",      # Type annotations (handled by ty)
    "COM812",   # Trailing comma (formatter conflict)
    "ISC001",   # Implicit string concat (formatter conflict)
    "CPY",      # Copyright notice (handled by local script)
    "E501",     # Line length (formatter handled)
    "E731",     # Lambda assignment
    "E741",     # Ambiguous variable name
    "PD011",    # pandas-vet (not using pandas heavily)
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value comparison
    "PLR5501",  # Use 'elif' instead of 'else: if'
    "PLW0603",  # Global statement
    "PLW2901",  # Outer loop variable overwritten by inner loop
    "S101",     # Use of assert (extensively used in beancount)
    "TRY003",   # Long exception messages
    "PTH",      # Use pathlib (preferring current style for now)
    # Individual failing rules to be addressed later:
    "A001", # builtin-variable-shadowing
    "A002", # builtin-argument-shadowing
    "A004", # builtin-import-shadowing
    "ARG001", # unused-function-argument
    "ARG002", # unused-method-argument
    "ARG005", # unused-lambda-argument
    "B007", # unused-loop-control-variable
    "B008", # function-call-in-default-argument
    "B011", # assert-false
    "B017", # assert-raises-exception
    "B028", # no-explicit-stacklevel
    "B904", # raise-without-from-inside-except
    "BLE001", # blind-except
    "C401", # unnecessary-generator-set
    "C405", # unnecessary-literal-set
    "C901", # complex-structure
    "DTZ005", # call-datetime-now-without-tzinfo
    "DTZ011", # call-date-today
    "EM101", # raw-string-in-exception
    "EM102", # f-string-in-exception
    "EM103", # dot-format-in-exception
    "ERA001", # commented-out-code
    "EXE002", # shebang-missing-executable-file
    "FA100", # future-rewritable-type-annotation
    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "FBT003", # boolean-positional-value-in-call
    "FIX001", # line-contains-fixme
    "FIX002", # line-contains-todo
    "FLY002", # static-join-to-f-string
    "G004", # logging-f-string
    "ISC003", # explicit-string-concatenation
    "LOG015", # root-logger-call
    "N801", # invalid-class-name
    "N802", # invalid-function-name
    "N805", # invalid-first-argument-name-for-method
    "N806", # non-lowercase-variable-in-function
    "N812", # lowercase-imported-as-non-lowercase
    "PERF102", # incorrect-dict-iterator
    "PERF203", # try-except-in-loop
    "PERF401", # manual-list-comprehension
    "PGH003", # blanket-type-ignore
    "PIE810", # multiple-starts-ends-with
    "PT009", # pytest-unittest-assertion
    "PT015", # pytest-assert-always-false
    "PT018", # pytest-composite-assertion
    "PT019", # pytest-fixture-param-without-value
    "PT027", # pytest-unittest-raises-assertion
    "PYI024", # collections-named-tuple
    "PYI034", # non-self-return-type
    "RET503", # implicit-return
    "RET504", # unnecessary-assign
    "RUF001", # ambiguous-unicode-character-string
    "RUF005", # collection-literal-concatenation
    "RUF012", # mutable-class-default
    "RUF015", # unnecessary-iterable-allocation-for-first-element
    "S105", # hardcoded-password-string
    "S108", # hardcoded-temp-file
    "S301", # suspicious-pickle-usage
    "S307", # suspicious-eval-usage
    "S311", # suspicious-non-cryptographic-random-usage
    "S324", # hashlib-insecure-hash-function
    "S602", # subprocess-popen-with-shell-equals-true
    "S603", # subprocess-without-shell-equals-true
    "S607", # start-process-with-partial-path
    "SIM102", # collapsible-if
    "SIM103", # needless-bool
    "SIM105", # suppressible-exception
    "SIM108", # if-else-block-instead-of-if-exp
    "SIM110", # reimplemented-builtin
    "SIM115", # open-file-with-context-handler
    "SIM117", # multiple-with-statements
    "SIM118", # in-dict-keys
    "SLF001", # private-member-access
    "T201", # print
    "TC003", # typing-only-standard-library-import
    "TD001", # invalid-todo-tag
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    "TD004", # missing-todo-colon
    "TRY004", # type-check-without-type-error
    "TRY300", # try-consider-else
    "TRY301", # raise-within-try
    "TRY401", # verbose-log-message
    "UP007", # non-pep604-annotation-union
    "G001", # logging-string-format
    "LOG009", # undocumented-warn
    "RET502", # implicit-return-value
    "RET505", # superfluous-else-return
    "RUF021", # parenthesize-chained-operators
    "RUF023", # unsorted-dunder-slots
    "SIM300", # yoda-conditions
    "SIM905", # split-static-string
    "SIM910", # dict-get-with-none-default
    "TRY400", # error-instead-of-exception
    "UP012", # unnecessary-encode-utf8
    "UP030", # format-literals
    "UP032", # f-string
    "UP035", # deprecated-import
    "RUF100", # unused-noqa
    "B020", # loop-variable-overrides-iterator
    "FA102", # future-required-type-annotation
    "INP001", # implicit-namespace-package
    "N816", # mixed-case-variable-in-global-scope
    "RUF013", # implicit-optional
    "S110", # try-except-pass
    "S608", # hardcoded-sql-expression
    "SIM113", # enumerate-for-loop
    "T203", # p-print
    "UP028", # yield-in-for-loop
    "A003", # builtin-attribute-shadowing
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]

# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
