load(
    "@pypi//:requirements.bzl",
    "requirement",
)
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# bazel run //requirements:dev_req.update
compile_pip_requirements(
    name = "dev_req",
    extra_args = ["--allow-unsafe"],
    requirements_in = "dev.txt",
    requirements_txt = "dev_lock.txt",
    data = [ "tools.txt", ],
)

# bazel run //requirements:tools_req.update
compile_pip_requirements(
    name = "tools_req",
    extra_args = ["--allow-unsafe"],
    requirements_in = "tools.txt",
    requirements_txt = "tools_lock.txt",
)
