[package]
name = "beancount-formatter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Beancount formatter library."

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.100"
beancount-parser = { path = "../beancount-parser/" }
tree-sitter-beancount = "2.4.2"
tree-sitter = { version = "0.26.3" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
similar = { version = "2.7.0", features = ["unicode"] }
serde_json = "1"
