[package]
name = "beancount-parser-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core beancount formatter logic."

[dependencies]
beancount-parser = { path = "../beancount-parser/" }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.38"
pyo3 = { version = "0.27.2", features = [
  'abi3-py310',
  'extension-module',
  'rust_decimal',
  'chrono'
] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
pest_derive = "2.7.14"
lazy_static = "1.5.0"

[dev-dependencies]
serde_json = "1"
similar = { version = "2.7.0", features = ["unicode"] }
