[package]
name = "beancount-parser"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Core beancount parsing logic."

[lib]
crate-type = ["lib"]

[dependencies]
beancount-tree-sitter = { path = "../beancount-tree-sitter" }
tree-sitter = { workspace = true }
ropey = '1.6.1'
anyhow = "1.0.100"
serde_json = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
similar = { workspace = true }
